--- a/practice_updated.html
+++ b/practice_updated.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="UTF-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
-	<title>Interactive Sales Data Visualization</title>
+	<title>Excel Analytic Patform</title>
 	
 	<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 	<style>
@@ -92,7 +92,7 @@ font-size: 1rem;
 </style>
 </head>
 <body  style="background: url('Orangebackground.jpeg') center/cover no-repeat; filter: brightness(0.5) contrast(0.) opacity();">
-<header >Interactive Sales Data Visualization</header>
+<header >Excel Analytic-Platform</header>
 <div class="container">
 <div class="button-group">
 <button onclick="window.location.href='../3d_pie_chart.html'">View 3D Chart</button>
